--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
             </ul>
         </nav>
     </header>
+    <main class="Hero">
+        <h1>S.W DIGITAL PRINTER</h1>
+        <button>ENTRAR</button>
+    </main>
+
+    
 </body>
 </html>
