agrego footer con iconos

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos.css">
     <title>s.w digital printer</title>
 </head>
-<body>
+<body class="container">
     <header>
         <nav>
             <ul>
@@ -22,7 +22,26 @@
         <h1>S.W DIGITAL PRINTER</h1>
         <button>ENTRAR</button>
     </main>
-    
+    <div class="Section-A">
+        <h2>IMPRESORAS</h2>
+        <p>Venta, Servicio, Alquiler.</p>
+    </div>
+    <div class="Section-B">
+    </div>
+    <div class="Section-C">
+    </div>
+    <div class="Section-D">
+        <h2>INSUMOS</h2>
+        <p>Originales, Alternativos.</p>
+    </div>
+    <footer class="Footer">
+        <ul>
+            <li><a href=""><img src="https://icongr.am/fontawesome/instagram.svg?size=50&color=424ab8" alt=""></a></li>
+            <li><a href=""><img src="https://icongr.am/fontawesome/facebook-official.svg?size=50&color=424ab8" alt=""></a></li>
+            <li><a href=""><img src="https://icongr.am/entypo/mobile.svg?size=50&color=424ab8" alt=""></a></li>
+            <li><a href=""><img src="https://icongr.am/entypo/location-pin.svg?size=50&color=424ab8" alt=""></a></li>
+        </ul>
+    </footer>
 
     
 </body>
